# wordle-lecture

./: CHANGELOG.md  LICENSE  README.md  README.org  lecture.org  wordle-lecture.cabal
app/: Stage1.hs
app/stage1/: Main.hs  Stage1.hs
app/stage2/: Main.hs  Stage2.hs
app/stage3/: Main.hs  Stage3.hs
app/stage4/: Main.hs  Stage4.hs
app/stage5/: Main.hs  Stage5.hs
img/: Untitled.xcf  scr.xcf
