cabal-version:      2.4
name:               wordle-lecture
version:            0.1.0.0
synopsis:
    A lecture on solving Wordle with Haskell. Part of the Introduction to Functional Programming course at the University of Brighton.

-- A longer description of the package.
-- description:
homepage:           https://github.com/jimburton/wordle-lecture

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             James Burton
maintainer:         j.burton@brighton.ac.uk

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable wordle-lecture
    main-is:          Stage1.hs
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    other-extensions: OverloadedStrings
    build-depends:    base ^>=4.15.0.0
                    , text
    hs-source-dirs:   app
    default-language: Haskell2010
